# matlab-simulink-s-function

./: CMakeLists.txt  README.md  include_directories.txt  link_libraries.txt  source_files.txt  test_s_function.slx
include/: optical_flow_uav_velocity.hpp
src/: matlab_simulink_s_function.cpp  optical_flow_uav_velocity.cpp
